cmake_minimum_required(VERSION 3.27)

# C++ files generated with:

# xsdcxx cxx-tree --namespace-map http://www.streit.cc/uddf/3.2/=streit \
# --output-dir xsd_parser  --root-element uddf --generate-ostream \
# --generate-forward --file-per-type uddf_3.2.3.xsd

project(
  uddf_parser_cxx
  LANGUAGES CXX
  VERSION 1.0.0)

find_package(PkgConfig REQUIRED)

pkg_check_modules(xerces-c REQUIRED IMPORTED_TARGET xerces-c)

# ==================================================================================================

add_library(
  uddf_parser_cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/load.cpp
  ${CMAKE_CURRENT_LIST_DIR}/src/abundance.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/accommodationType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/acknowledge.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/addressType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/alarm.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/alarmType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/alcoholbeforedive.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/anysymptoms.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/apparatus.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/applicationdataType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/ascent.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/baseCalculationType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/batterychargecondition.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/bottomtimetablescopeType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/bottomtimetableType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/buddy.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/buehlmannType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/builtType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/business.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/calculatebottomtimetable.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/calculateprofile.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/calculatetable.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/cameraType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/caveType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/certificationType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/contactType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/currency.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/current.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dateoftrip.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dcalarmtimeType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dcalarmType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dcalarmWithDepthType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dcalarmWithTimeType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dcbuddydataType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dcdecomodelType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dcdivedepthalarmType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dcdivepo2alarmType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dcdivesitedataType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dcdivetimealarmType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dcendndtalarmType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dcgasdefinitionsdataType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/decomodel.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/decostop.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/decotrainer.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/descent.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dimensionType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/divebaseType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/divecomputercontrol.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/divecomputerdumpType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/diveinsurances.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/divemode.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/divemodeType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/divepermissions.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/diveplan.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/diver.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/divesite.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/divetable.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/divetrip.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/diveType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/dominance.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/drugType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/ecologyType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/education.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/encapsulatedDateTimeType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/environment.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/equipmentconfigurationType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/equipmentmalfunction.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/equipmentPieceType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/equipmentType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/equipmentused.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/examinationresult.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/examinationType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/exposuretoaltitudeType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/faunaType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/floraType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/gas.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/gasdefinitions.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/generator.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/geographyType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/getdcdataType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/globalalarm.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/globalalarmsgiven.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/globallightintensityType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/gradientfactor.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/guideType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/hargikas.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/heinrichsweikamp.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/ID.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/IDREF.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/ID_TYPE.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/imagedata.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/imageType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/individualType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/indoorType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/infinity.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/informationafterdiveType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/informationbeforediveType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/inputprofileType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/instructorType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/insuranceType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/invertebrataType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/kind.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/lifestage.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/lightintensityType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/linkType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/load.cpp
  ${CMAKE_CURRENT_LIST_DIR}/src/maker.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/manufacturerType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/markerType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/measuredpo2.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/mediadata.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/mediaType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/medicalbeforedive.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/medical.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/membership.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/meteringmethod.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/mixchangeType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/mixType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/namedType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/nosuit.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/notesType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/numberofdives.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/observationsType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/occurence.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/operatorType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/outputType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/periodicallytaken.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/permitType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/personalType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/personType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/placeType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/platform.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/priceperdivepackageType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/priceType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/problems.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/profiledata.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/program.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/purchaseType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/purpose.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/quality.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/ratingType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/ratingvalueType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/rebreatherType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/relateddives.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/repetitiongroupType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/rgbmType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/samplesType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/setby.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/setdcdataType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/setpo2.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/sexType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/shopType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/simpleNamedType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/singleLifeFormType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/sitedataType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/siteType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/smoking.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/speciesType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/stateofrestbeforedive.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/suittype1.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/suitType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/surfaceintervalType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/tablegeneration.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/tablescopeType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/tableType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/tankdataType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/tankmaterialType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/tankpressure.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/tankType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/tausim.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/tautabu.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/thermalcomfort.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/tissueType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/transportation.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/trippartType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/tripType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/type.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/uddf_3.2.3.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/uddf.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/vertebrataType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/vesselType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/videocameraType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/vpmType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/wayaltitudeType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/waypointType.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/workload.cxx
  ${CMAKE_CURRENT_LIST_DIR}/src/wreckType.cxx)

target_sources(
  uddf_parser_cxx
  PUBLIC
    FILE_SET
    HEADERS
    BASE_DIRS
    ${CMAKE_CURRENT_LIST_DIR}/include
    FILES
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/load.hpp
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/abundance-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/abundance.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/accommodationType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/accommodationType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/acknowledge-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/acknowledge.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/addressType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/addressType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/alarm-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/alarm.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/alarmType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/alarmType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/alcoholbeforedive-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/alcoholbeforedive.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/anysymptoms-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/anysymptoms.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/apparatus-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/apparatus.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/applicationdataType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/applicationdataType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/ascent-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/ascent.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/baseCalculationType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/baseCalculationType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/batterychargecondition-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/batterychargecondition.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/bottomtimetablescopeType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/bottomtimetablescopeType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/bottomtimetableType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/bottomtimetableType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/buddy-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/buddy.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/buehlmannType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/buehlmannType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/builtType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/builtType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/business-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/business.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/calculatebottomtimetable-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/calculatebottomtimetable.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/calculateprofile-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/calculateprofile.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/calculatetable-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/calculatetable.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/cameraType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/cameraType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/caveType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/caveType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/certificationType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/certificationType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/contactType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/contactType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/currency-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/currency.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/current-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/current.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dateoftrip-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dateoftrip.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcalarmtimeType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcalarmtimeType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcalarmType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcalarmType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcalarmWithDepthType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcalarmWithDepthType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcalarmWithTimeType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcalarmWithTimeType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcbuddydataType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcbuddydataType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcdecomodelType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcdecomodelType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcdivedepthalarmType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcdivedepthalarmType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcdivepo2alarmType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcdivepo2alarmType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcdivesitedataType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcdivesitedataType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcdivetimealarmType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcdivetimealarmType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcendndtalarmType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcendndtalarmType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcgasdefinitionsdataType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dcgasdefinitionsdataType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/decomodel-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/decomodel.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/decostop-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/decostop.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/decotrainer-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/decotrainer.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/descent-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/descent.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dimensionType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dimensionType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divebaseType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divebaseType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divecomputercontrol-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divecomputercontrol.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divecomputerdumpType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divecomputerdumpType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/diveinsurances-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/diveinsurances.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divemode-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divemode.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divemodeType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divemodeType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divepermissions-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divepermissions.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/diveplan-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/diveplan.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/diver-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/diver.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divesite-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divesite.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divetable-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divetable.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divetrip-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/divetrip.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/diveType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/diveType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dominance-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/dominance.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/drugType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/drugType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/ecologyType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/ecologyType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/education-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/education.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/encapsulatedDateTimeType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/encapsulatedDateTimeType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/environment-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/environment.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/equipmentconfigurationType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/equipmentconfigurationType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/equipmentmalfunction-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/equipmentmalfunction.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/equipmentPieceType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/equipmentPieceType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/equipmentType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/equipmentType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/equipmentused-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/equipmentused.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/examinationresult-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/examinationresult.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/examinationType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/examinationType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/exposuretoaltitudeType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/exposuretoaltitudeType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/faunaType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/faunaType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/floraType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/floraType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/gasdefinitions-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/gasdefinitions.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/gas-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/gas.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/generator-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/generator.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/geographyType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/geographyType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/getdcdataType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/getdcdataType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/globalalarm-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/globalalarm.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/globalalarmsgiven-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/globalalarmsgiven.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/globallightintensityType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/globallightintensityType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/gradientfactor-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/gradientfactor.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/guideType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/guideType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/hargikas-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/hargikas.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/heinrichsweikamp-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/heinrichsweikamp.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/ID-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/ID.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/IDREF-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/IDREF.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/ID_TYPE-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/ID_TYPE.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/imagedata-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/imagedata.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/imageType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/imageType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/individualType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/individualType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/indoorType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/indoorType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/infinity-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/infinity.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/informationafterdiveType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/informationafterdiveType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/informationbeforediveType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/informationbeforediveType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/inputprofileType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/inputprofileType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/instructorType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/instructorType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/insuranceType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/insuranceType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/invertebrataType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/invertebrataType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/kind-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/kind.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/lifestage-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/lifestage.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/lightintensityType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/lightintensityType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/linkType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/linkType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/load.hpp
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/maker-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/maker.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/manufacturerType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/manufacturerType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/markerType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/markerType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/measuredpo2-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/measuredpo2.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/mediadata-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/mediadata.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/mediaType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/mediaType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/medicalbeforedive-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/medicalbeforedive.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/medical-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/medical.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/membership-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/membership.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/meteringmethod-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/meteringmethod.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/mixchangeType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/mixchangeType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/mixType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/mixType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/namedType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/namedType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/nosuit-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/nosuit.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/notesType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/notesType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/numberofdives-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/numberofdives.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/observationsType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/observationsType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/occurence-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/occurence.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/operatorType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/operatorType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/outputType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/outputType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/periodicallytaken-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/periodicallytaken.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/permitType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/permitType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/personalType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/personalType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/personType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/personType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/placeType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/placeType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/platform-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/platform.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/priceperdivepackageType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/priceperdivepackageType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/priceType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/priceType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/problems-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/problems.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/profiledata-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/profiledata.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/program-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/program.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/purchaseType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/purchaseType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/purpose-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/purpose.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/quality-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/quality.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/ratingType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/ratingType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/ratingvalueType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/ratingvalueType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/rebreatherType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/rebreatherType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/relateddives-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/relateddives.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/repetitiongroupType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/repetitiongroupType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/rgbmType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/rgbmType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/samplesType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/samplesType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/setby-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/setby.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/setdcdataType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/setdcdataType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/setpo2-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/setpo2.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/sexType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/sexType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/shopType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/shopType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/simpleNamedType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/simpleNamedType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/singleLifeFormType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/singleLifeFormType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/sitedataType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/sitedataType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/siteType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/siteType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/smoking-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/smoking.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/speciesType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/speciesType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/stateofrestbeforedive-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/stateofrestbeforedive.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/suittype1-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/suittype1.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/suitType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/suitType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/surfaceintervalType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/surfaceintervalType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tablegeneration-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tablegeneration.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tablescopeType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tablescopeType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tableType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tableType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tankdataType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tankdataType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tankmaterialType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tankmaterialType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tankpressure-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tankpressure.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tankType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tankType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tausim-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tausim.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tautabu-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tautabu.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/thermalcomfort-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/thermalcomfort.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tissueType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tissueType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/transportation-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/transportation.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/trippartType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/trippartType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tripType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/tripType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/type-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/type.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/uddf_3.2.3-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/uddf_3.2.3.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/uddf-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/uddf.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/vertebrataType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/vertebrataType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/vesselType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/vesselType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/videocameraType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/videocameraType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/vpmType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/vpmType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/wayaltitudeType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/wayaltitudeType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/waypointType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/waypointType.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/workload-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/workload.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/wreckType-fwd.hxx
    ${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit/wreckType.hxx)

target_include_directories(
  uddf_parser_cxx
  PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include/uddf2fit>
         $<INSTALL_INTERFACE:include> $<INSTALL_INTERFACE:include/uddf2fit>)
target_link_libraries(uddf_parser_cxx PUBLIC PkgConfig::xerces-c)

add_executable(test ${CMAKE_CURRENT_LIST_DIR}/main.cpp)
target_link_libraries(test PRIVATE uddf_parser_cxx)

# ==================================================================================================

if(NOT TARGET uddf2fit::uddf_parser_cxx)
  add_library(uddf2fit::uddf_parser_cxx ALIAS uddf_parser_cxx)
endif()

# ==================================================================================================

install(
  TARGETS uddf_parser_cxx
  EXPORT uddf_parser_cxx
  LIBRARY COMPONENT Runtime NAMELINK_COMPONENT Development
  RUNTIME COMPONENT Runtime
  ARCHIVE COMPONENT Development
          FILE_SET HEADERS
          COMPONENT Development)
install(
  EXPORT uddf_parser_cxx
  NAMESPACE uddf2fit::
  DESTINATION lib/cmake/uddf_parser_cxx)

include(CMakePackageConfigHelpers)
configure_package_config_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
  "${CMAKE_CURRENT_BINARY_DIR}/uddf_parser_cxxConfig.cmake"
  INSTALL_DESTINATION "lib/cmake/uddf_parser_cxx"
  NO_SET_AND_CHECK_MACRO NO_CHECK_REQUIRED_COMPONENTS_MACRO)
write_basic_package_version_file(
  "${CMAKE_CURRENT_BINARY_DIR}/uddf_parser_cxxConfigVersion.cmake"
  COMPATIBILITY AnyNewerVersion)

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/uddf_parser_cxxConfig.cmake
              ${CMAKE_CURRENT_BINARY_DIR}/uddf_parser_cxxConfigVersion.cmake
        DESTINATION lib/cmake/uddf_parser_cxx)
